# NEUQ_RICVC_src

./: README.md  RIC_README.docx  RIC校内赛算法技术报告.docx
control_robot/: CMakeLists.txt  package.xml
control_robot/src/: SendSerialCom.cpp  SerialCom.cpp  SerialCom.h  control_robot.cpp  serialcom_data_handle.cpp
ldlidar_sl_ros2/launch/: ld14.launch.py  ld14p.launch.py
ldlidar_sl_ros2/src/: demo.cpp
navigation2/nav2_amcl/: CMakeLists.txt
navigation2/nav2_amcl/launch/: nav2_amcl_launch.py
navigation2/nav2_amcl/src/: amcl_node.cpp
navigation2/nav2_bringup/launch/: bringup_launch.py  cloned_multi_tb3_simulation_launch.py  localization_launch.py  tb3_simulation_launch.py  unique_multi_tb3_simulation_launch.py  wmbbl_robot.launch.py
navigation2/nav2_bringup/maps/: map_9021.pgm  map_9021.yaml  map_9030.pgm  map_9030.yaml  map_9036.pgm  map_9036.yaml
navigation2/nav2_bringup/params/: nav2_3d_params.yaml  nav2_params.yaml
navigation2/nav2_bringup/urdf/: wmbbl_robot_base.urdf
navigation2/nav2_costmap_2d/launch/: example.launch  example_params.yaml
navigation2/nav2_map_server/launch/: map_saver_server.launch.py
rf2o_laser_odometry_ros2/include/rf2o_laser_odometry/: CLaserOdometry2DNode.hpp
slam_gmapping/slam_gmapping/launch/: slam_gmapping.launch.py
wmbbl_robot_description/: package.xml  setup.cfg  setup.py
wmbbl_robot_description/config/: nav2_params.yaml
wmbbl_robot_description/launch/: display_rviz2.launch.py  gazebo.launch.py
wmbbl_robot_description/urdf/: wmbbl_robot_base.urdf
wmbbl_robot_description/wmbbl_robot_description/: rotate_wheel.py
(+1 files in other folders)
